toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/Toy_Car__c.object-meta.xml
<CustomObject>
    <label>Toy Car</label>
    <nameField>
        <displayFormat>TC-{000}</displayFormat>
        <label>Toy Car ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toy Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>