toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/fields/Car_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Car_Manufacturer__c</fullName>
    <label>Car Manufacturer</label>
    <referenceTo>Car_Manufacturer__c</referenceTo>
    <relationshipLabel>Toy Cars</relationshipLabel>
    <relationshipName>Toy_Cars</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>