toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <label>Photo</label>
    <type>Url</type>
</CustomField>