toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/fields/Toy_Car_Name__c.field-meta.xml
<CustomField>
    <fullName>Toy_Car_Name__c</fullName>
    <label>Toy Car Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>