toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/fields/Toy_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Toy_Manufacturer__c</fullName>
    <label>Toy Manufacturer</label>
    <referenceTo>Toy_Manufacturer__c</referenceTo>
    <relationshipLabel>Toy Cars</relationshipLabel>
    <relationshipName>Toy_Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>