toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/fields/Toy_Year__c.field-meta.xml
<CustomField>
    <fullName>Toy_Year__c</fullName>
    <label>Toy Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>