toy-car-project-lwc/force-app/main/default/objects/Toy_Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Car_Manufacturer__c</columns>
    <columns>Toy_Manufacturer__c</columns>
    <columns>Toy_Car_Name__c</columns>
    <columns>Toy_Year__c</columns>
    <columns>Variant__c</columns>
    <columns>Pack__c</columns>
    <columns>Color__c</columns>
    <columns>Car_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>